--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "nft-did-resolver": "^0.1.0",
+    "nft-did-resolver": "^0.2.1",
     "3id-did-provider": "^1.1.0",
-    "@ceramicnetwork/3id-did-resolver": "^1.2.7",
-    "@ceramicnetwork/blockchain-utils-linking": "^1.0.2",
-    "@ceramicnetwork/common": "^1.1.0",
-    "@ceramicnetwork/http-client": "^1.0.7",
-    "@ceramicnetwork/stream-caip10-link": "^1.0.7",
-    "@ceramicnetwork/stream-tile": "^1.0.7",
+    "@ceramicnetwork/3id-did-resolver": "^1.3.2-rc.1",
+    "@ceramicnetwork/blockchain-utils-linking": "^1.1.2-rc.0",
+    "@ceramicnetwork/common": "^1.3.0-rc.1",
+    "@ceramicnetwork/http-client": "^1.2.0-rc.1",
+    "@ceramicnetwork/stream-caip10-link": "^1.1.2-rc.1",
+    "@ceramicnetwork/stream-tile": "^1.2.0-rc.1",
     "@stablelib/random": "^1.0.1",
     "@stablelib/sha256": "^1.0.1",
     "@truffle/hdwallet-provider": "^1.4.2",
