--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.4.7",
-    "prettier": "^2.3.2",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "@types/node": "^16.9.1",
+    "prettier": "^2.4.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "nft-did-resolver": "^0.2.1",
     "3id-did-provider": "^1.1.0",
-    "@ceramicnetwork/3id-did-resolver": "^1.3.2-rc.1",
-    "@ceramicnetwork/blockchain-utils-linking": "^1.1.2-rc.0",
-    "@ceramicnetwork/common": "^1.3.0-rc.1",
-    "@ceramicnetwork/http-client": "^1.2.0-rc.1",
-    "@ceramicnetwork/stream-caip10-link": "^1.1.2-rc.1",
-    "@ceramicnetwork/stream-tile": "^1.2.0-rc.1",
+    "@ceramicnetwork/common": "^1.4.0",
+    "@ceramicnetwork/stream-caip10-link": "^1.1.4",
+    "@ceramicnetwork/3id-did-resolver": "^1.4.2",
+    "@ceramicnetwork/blockchain-utils-linking": "^1.1.3",
+    "@ceramicnetwork/http-client": "^1.2.2",
+    "@ceramicnetwork/stream-tile": "^1.3.0",
     "@stablelib/random": "^1.0.1",
     "@stablelib/sha256": "^1.0.1",
-    "@truffle/hdwallet-provider": "^1.4.2",
+    "@truffle/hdwallet-provider": "^1.5.0",
     "caip": "^0.9.2",
     "cross-fetch": "^3.1.4",
-    "did-jwt": "^5.6.2",
+    "did-jwt": "^5.7.0",
     "did-resolver": "^3.1.0",
     "dids": "^2.4.0",
-    "ethers": "^5.4.2",
+    "ethers": "^5.4.6",
     "json-to-graphql-query": "^2.1.0",
-    "key-did-resolver": "^1.2.1",
+    "key-did-resolver": "^1.4.0",
     "rpc-utils": "^0.3.4",
-    "tslib": "^2.3.0",
-    "uint8arrays": "^2.1.8",
-    "web3": "^1.5.0",
+    "tslib": "^2.3.1",
+    "uint8arrays": "^3.0.0",
+    "web3": "^1.5.2",
     "dag-jose-utils": "^0.1.1",
-    "cids": "^1.1.6"
+    "cids": "^1.1.9"
   }
 }
